# shearwater

./: .gitignore  README.md  checker.py  main.js  pyproject.toml  ui.js  webui.html
assets/: clock.html  ui.js  webui.html
shearwater/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  todo.md  vite.config.js
shearwater/src/: App.vue  chartformatter.js  db.js  main.js  routes.js  store.js
shearwater/src/assets/: base.css  main.css
shearwater/src/components/: HomeView.vue  computer-info.vue  dive-card.vue  dive-clock.vue  dive-details-general.vue  dive-details.vue  pressure-gauge.vue  transmitter-detailes.vue  webp-image.vue
shearwater/src/device/: SLIP.js  ble.js  constants.js  date.functions.js  divelogs.js  divemanifest.js  logformat.js
shearwater/src/views/: BluetoothDisabledView.vue  DiveView.vue  HomeView.vue
