[tool.poetry]
name = "shearwater"
version = "0.1.0"
description = ""
authors = ["builder555 <85308587+builder555@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
black = "^24.4.2"
bleak = "^0.22.2"
sliplib = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
